# taiko-forge

./: .gitignore  README.md  pyproject.toml  taiko-forge.spec
.github/workflows/: release.yml
examples/: Material Girl.tja
src/taiko_forge/: __init__.py  __main__.py  app.py  audio.py  builder.py  config.py  downloader.py  edat.py  ese_browser.py  fumen.py  tja.py
