[project]
name = "taiko-forge"
version = "2.0.1"
description = "Custom DLC builder for Taiko no Tatsujin Portable DX (PSP)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "customtkinter>=5.2.0",
    "tja2fumen>=0.9.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
taiko-forge = "taiko_forge.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taiko_forge"]
